<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/FondoFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layoutResultados"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/TituloCentrado"
                android:text="Resultados"/>

            <TextView
                style="@style/TextoNegrita"
                android:text="@string/resultadosMB"/>

            <TextView
                style="@style/Texto"
                android:id="@+id/textViewMB"
                />

            <TextView
                style="@style/TextoNegrita"
                android:text="@string/resultadosMantener"/>

            <TextView
                style="@style/Texto"
                android:id="@+id/textViewMantener"
                />

            <TextView
                style="@style/TextoNegrita"
                android:text="@string/resultadosAdelgazar"/>

            <TextView
                style="@style/Texto"
                android:id="@+id/textViewAdelgazar"
                />

            <TextView
                style="@style/TextoNegrita"
                android:text="@string/resultadosSubirPeso"/>

            <TextView
                style="@style/Texto"
                android:id="@+id/textViewSubir"
                />

            <Button
                style="@style/Boton"
                android:id="@+id/buttonVolver"
                android:text="Volver" />

            <TextView
                style="@style/TextoCentrado"
                android:layout_marginTop="30dp"
                android:text="@string/resultadosAviso"/>

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layoutFormulario"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/TextoNegrita"
                android:text="@string/peso"/>

            <EditText
                style="@style/editText"
                android:id="@+id/editTextPeso" />

            <TextView
                style="@style/TextoNegrita"
                android:text="@string/altura"/>

            <EditText
                style="@style/editText"
                android:id="@+id/editTextAltura" />

            <TextView
                style="@style/TextoNegrita"
                android:text="@string/edad"/>

            <EditText
                style="@style/editText"
                android:id="@+id/editTextEdad" />

            <TextView
                style="@style/TextoNegrita"
                android:text="@string/sexo"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hombre"
                        android:layout_marginLeft="10dp"
                        android:checked="true"
                        android:id="@+id/radioButtonHombre"
                        android:textColor="@color/negro" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mujer"
                    android:id="@+id/radioButtonMujer"
                    android:checked="false"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/negro" />
            </RadioGroup>

            <TextView
                style="@style/TextoNegrita"
                android:text="@string/nivelActivdad"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nivelActividad1"
                    android:layout_marginLeft="10dp"
                    android:checked="true"
                    android:id="@+id/radioButtonSedentario"
                    android:textColor="@color/negro" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nivelActividad2"
                    android:id="@+id/radioButtonLigera"
                    android:checked="false"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/negro" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nivelActividad3"
                    android:layout_marginLeft="10dp"
                    android:checked="false"
                    android:id="@+id/radioButtonModerada"
                    android:textColor="@color/negro" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nivelActividad4"
                    android:id="@+id/radioButtonActiva"
                    android:checked="false"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/negro" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nivelActividad5"
                    android:id="@+id/radioButtonMuyActiva"
                    android:checked="false"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/negro" />
            </RadioGroup>

            <Button
                style="@style/Boton"
                android:id="@+id/buttonCalcular"
                android:text="Calcular" />

            <TextView
                android:id="@+id/textViewResultado"
                style="@style/TextoCentrado" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>